--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="envelope">
                 <div class="card">
                     <div class="text">
-                        Happy <br> Valentines's <br> Day
+                        Happy <br> Boyfriend's <br> Day <br> I love you
                     </div>
                     <div class="heart"></div>
                 </div>
