--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
             <div class="front"></div>
         </div>
     </div>
+
+    <script>
+        
+        document.querySelector('.valentines').addEventListener('click', function() {
+            
+            document.querySelector('.card').style.transform = 'translateY(-100px)';
+        });
+    </script>
 </body>
 
 </html>
