--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Boyfriend's Day</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -24,13 +24,8 @@
         </div>
     </div>
 
-    <script>
-        
-        document.querySelector('.valentines').addEventListener('click', function() {
-            
-            document.querySelector('.card').style.transform = 'translateY(-100px)';
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
+
